# rust-rest-prod

./: .gitignore  Cargo.toml  Rest.rest  config.json  readme.md  template.xlsx
entity/: Cargo.toml
entity/src/: dog.rs  lib.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
shelter_main/: Cargo.toml
shelter_main/src/: main.rs  settings.rs
shelter_main/src/api/: mod.rs  v1.rs
shelter_main/src/api/handlers/: dogs.rs  hello.rs  login.rs  mod.rs  statics.rs
shelter_main/src/api/middleware/: json.rs  jwt.rs  mod.rs
shelter_main/src/api/request/: login.rs
shelter_main/src/api/response/: dog.rs  error.rs  login.rs  mod.rs
shelter_main/src/commands/: createadmin.rs  gen.rs  hello.rs  migrate.rs  mod.rs  serve.rs
shelter_main/src/state/: mod.rs
