[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="shelter_main"
path="src/main.rs"
[dependencies]
anyhow = "1.0"
axum = "0.7.3"
clap = "4.4"
config = "0.13"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.35",features = ["full"]}
