[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="shelter_main"
path="src/main.rs"
[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
axum = "0.7.3"
clap = "4.4"
config = "0.13"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.35",features = ["full"]}
tower-http = { version = "0.5", features = [ "trace"] }
tracing ={ version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = {version =  "0.3",features = [ "registry", "env-filter"] }
migration={ path = "../migration"}
sea-orm = { version = "0.12", features = [ "sqlx-mysql","sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }