[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="shelter_main"
path="src/main.rs"
[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
axum = "0.7"
clap = "4.4"
config = "0.13"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.35",features = ["full"]}
tower-http = { version = "0.5", features = [ "trace"] }
migration={ path = "../migration"}
entity = {path = "../entity"}
sea-orm = { version = "0.12", features = [ "sqlx-mysql","sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
password-hash = {version = "0.5"}
argon2 = {version = "0.5"}
jsonwebtoken = {version = "9.2"}
chrono = {version = "0.4"}
utoipa = {version = "4.2" }
 
tracing ={ version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = {version =  "0.3",features = [ "registry", "env-filter"] }
tracing-opentelemetry = { version = "0.22" } 
opentelemetry = { version = "0.21", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics", "logs"]  }
opentelemetry-semantic-conventions = { version = "0.13" }
opentelemetry-http = "0.10"